# surprisal-non-ordinary-reading

./: .gitignore  README.md  pyproject.toml  surp_py_env.yml  surp_r_env.yml
src/: __init__.py  constants.py  utils.py
src/Data_Tools/: P_Q_df_funcs.py  eye_df_funcs.py
src/GAM/: GAM_analysis_funcs.R  GAM_dll_main.R  GAM_run_analysis.R  GAM_run_config.R  GAM_smooths_main.R  preprocess_df.R
src/GAM/cols_lists/: P_context_surp_cols_all_models.csv  reread_by_surp_col.csv  surp_EleutherAI-pythia-160m-context_cols.csv  surp_EleutherAI-pythia-70m-context_cols.csv  surp_cols_google-recurrentgemma.csv  surp_cols_google-recurrentgemma_zoom_in.csv  surp_gemma-2-9b_article_cols.csv  surp_gemma-2-9b_article_zoom_in_cols.csv  surp_gpt2-context_cols.csv  surp_large_models-context_cols.csv  surp_large_models-context_zoom_in_cols.csv  surp_large_models_part_2-context_cols.csv  surp_large_models_part_2-context_zoom_in_cols.csv  surp_large_models_part_2-context_zoom_in_cols2.csv  surp_large_models_part_3-context_cols.csv  surp_large_models_part_3-context_zoom_in_cols.csv  surp_pythia70m_article_cols.csv  surp_pythia70m_article_zoom_in_cols.csv
src/GAM/context_plots/: GAM_context_plot.R  GAM_context_plot_config.R  GAM_context_plot_valid_combinations.csv
src/GAM/density/: GAM_density.R
src/GAM/perplexity/: models_names_with_ppl.csv  (+1 more)
src/Perplexity/: perplexity_funcs.py
src/Surprisal_Estimates/: A_context_cols.py  context_funcs.py  context_instructions.py  context_instructions_df.csv  context_params.py  context_run.py  context_text_filler_funcs.py  debug_surp_val.py
(+1331 files in other folders)
