[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "surprisal-non-ordinary-reading"
version = "0.1.0"
authors = [
  {name="Keren Gruteke Klein", email="gkeren - at - campus.technion.ac.il"},
  {name="Yoav Meiri", email="meiri.yoav - at - campus.technion.ac.il"},
]

readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  # dependencies
  # https://github.com/lacclab/text-metrics.git
]

[project.urls]
Homepage = "https://github.com/lacclab/OneStopSurprisal"
repository = "https://github.com/lacclab/OneStopSurprisal"
"Bug Tracker" = "https://github.com/lacclab/OneStopSurprisal/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
